I updated the tags and the swagger JSON
